--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bootstrap": "^5.3.8",
     "express": "^5.1.0",
     "jwt-decode": "^4.0.0",
+    "ngx-toastr": "^20.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
